--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,9 @@ html {
 li:hover{
     color : red
 }
+   /* CSS styling for header */
+   #header {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
